# chip8-emulator

./: Cargo.toml  README.md
src/: main.rs
